--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 role="heading">Portfoliio</h1>
+	<nav role="navigation">
+		<ul role="list">
+			<li role="listitem">List 1</li>
+			<li role="listitem">List 2</li>
+			<li role="listitem">List 3</li>
+		</ul>
+		
+	</nav>
+	<img role="img" src="https://images.pexels.com/photos/3172740/pexels-photo-3172740.jpeg?cs=srgb&dl=pexels-1460648-3172740.jpg&fm=jpg">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
